test/expr/bad-label.txt
;;; ERROR: 1
(module (func (label)))
(;; STDERR ;;;
expr/bad-label.txt:2:21: syntax error, unexpected ), expecting (
;;; STDERR ;;)
